Fix background over scrollbar (fix #874)

--- a/src/components/SideNav.module.css
+++ b/src/components/SideNav.module.css
@@ -1,21 +1,29 @@
-.sideNav {
+.nav {
   display: flex;
   flex-flow: column;
   flex-shrink: 0;
-  width: 200px;
+  width: 220px;
   border-right: 1px solid var(--border-color);
   background-color: var(--sidebar-bg);
   max-height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
   position: relative;
+  top: 0;
 }
 
-.sideNavActions {
+.header {
+  z-index: 10;
+  position: sticky;
+  top: 0;
+  background-color: var(--sidebar-bg);
+}
+
+.actions {
   align-items: stretch;
   margin-right: 8px;
 }
 
-.sideNavTitle {
+.title {
   margin: 10px 12px;
   font-size: 0.875rem;
   font-weight: bold;
@@ -23,11 +31,10 @@
   flex: 1;
 }
 
-.sideNavItems {
+.content {
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  overflow: auto;
 }
 
 .letter {
@@ -36,11 +43,15 @@
   text-transform: uppercase;
   font-weight: bolder;
   position: sticky;
-  top: 0;
+  top: 32px;
   background-color: var(--sidebar-bg);
   color: var(--text-muted);
 }
 
-* + .letter {
-  margin-top: 12px;
+.items {
+  display: block;
+}
+
+.letter + .items {
+  margin-bottom: 12px;
 }
